完成上传进度监控、wx.request()的二次封装、图片懒加载

--- a/miniprogram_CloudGallery/pages/uploadsetting/uploadsetting.less
+++ b/miniprogram_CloudGallery/pages/uploadsetting/uploadsetting.less
@@ -3,6 +3,18 @@ page {
     padding: 0 .5em;
 }
 
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    z-index: 99999999999 !important;
+}
+
+.block {
+    color: #ffffff;
+}
+
 .container {
     height: 100vh;
     display: flex;
