--- a/miniprogram_CloudGallery/pages/uploadsetting/uploadsetting.wxss
+++ b/miniprogram_CloudGallery/pages/uploadsetting/uploadsetting.wxss
@@ -2,6 +2,16 @@ page {
   box-sizing: border-box;
   padding: 0 0.5em;
 }
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  z-index: 99999999999 !important;
+}
+.block {
+  color: #ffffff;
+}
 .container {
   height: 100vh;
   display: flex;
