--- a/miniprogram_CloudGallery/pages/index/index.less
+++ b/miniprogram_CloudGallery/pages/index/index.less
@@ -1,24 +1,13 @@
-page {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    padding: 0 .5em;
-    position: relative;
-}
-
-.scrollarea {
-    flex: 1;
-    overflow-y: hidden;  
+.my {
+    font-size: 45rpx;
+    font-weight: bolder;
 }
 
 .container {
     display: grid;
-    grid-template-columns:repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 4px;
-    margin: 10px 0;    
     justify-items: center;
-    padding-bottom: 3em;
 
     .item {
         width: 150px;
@@ -45,12 +34,14 @@ page {
     }
 }
 
-.add {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    background-color: #1989fa;
-    color: #fff;
-    border-radius: 50%;
-    box-shadow: 2px 1px 10px #1989fa;
+.else {
+    .add {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        background-color: #1989fa;
+        color: #fff;
+        border-radius: 50%;
+        box-shadow: 2px 1px 10px #1989fa;
+    }
 }
