--- a/miniprogram_CloudGallery/pages/index/index.wxss
+++ b/miniprogram_CloudGallery/pages/index/index.wxss
@@ -1,22 +1,12 @@
-page {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  padding: 0 0.5em;
-  position: relative;
-}
-.scrollarea {
-  flex: 1;
-  overflow-y: hidden;
+.my {
+  font-size: 45rpx;
+  font-weight: bolder;
 }
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 4px;
-  margin: 10px 0;
   justify-items: center;
-  padding-bottom: 3em;
 }
 .container .item {
   width: 150px;
@@ -38,7 +28,7 @@ page {
 .container .item span {
   font-size: 0.5em;
 }
-.add {
+.else .add {
   position: absolute;
   bottom: 20px;
   right: 20px;
